# claude_orchestration

./: .devcontainer  .env.local.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  ClaudeCodeCheatsheet.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: agent-design.md  behavior-preserving-cuts.md  claude-code-guide.md  handoff-coverage.md  hooks-guide.md  lang-python.md  prompt-caching.md  readme-diagrams.md  reasoned-instructions.md  self-check.md  terminology.md
.claude/skills/blueprint-audit/: SKILL.md
.devcontainer/: allowed-domains.conf  devcontainer.json
blueprint/: .gitignore
blueprint/.claude/: .gitignore  CLAUDE.md  settings.json
blueprint/.claude/agents/: architect.md  code-reviewer.md  developer.md  orchestrator.md  (+3 more)
blueprint_tdd_v1/: README.md
blueprint_tdd_v1/.claude/: CLAUDE.md
blueprint_tdd_v1/.devcontainer/: devcontainer.json  init-firewall.sh
blueprint_testlist/: README.md
blueprint_testlist/.claude/: CLAUDE.md
blueprint_testlist/tests/: conftest.py
blueprint_testlist_v1/: .devcontainer  README.md
blueprint_testlist_v1/.claude/: CLAUDE.md
blueprint_testlist_v1/.devcontainer/: Dockerfile
blueprint_testlist_v2/.claude/: settings.json
blueprint_v1/tests/: blueprint_contracts.py  conftest.py
blueprint_v2/: CLAUDE.md  README.md
blueprint_v2/.claude/: CLAUDE.md  config.json  settings.json
blueprint_v2/tests/: blueprint_contracts.py  conftest.py
blueprint_v3/: CLAUDE.md
blueprint_v3/.claude/: CLAUDE.md  settings.json
blueprint_v3/tests/: blueprint_contracts.py  conftest.py
blueprint_v4/.claude/: CLAUDE.md
blueprint_v5/.claude/: CLAUDE.md
blueprint_v6/.claude/: CLAUDE.md
blueprint_v7/.claude/: CLAUDE.md
blueprint_v8/.claude/: CLAUDE.md
blueprints/autonomous/: CLAUDE.md
blueprints/workflow/: CLAUDE.md
container_template/: .env.example  Dockerfile  cache-proxy.py  docker-compose.yaml
devcontainer_template/: README.md
devcontainer_template/.devcontainer/: Dockerfile  README.md  allowed-domains.conf  devcontainer.json  init-claude-settings.sh  post-create.sh  post-start.sh
devcontainer_templates/: CLAUDE.md
devcontainer_templates/.devcontainer/: Dockerfile
devcontainer_templates/.devcontainer_audio/: devcontainer-lock.json
docs/: prompt-caching-proxy-solution.md
(+150 files in other folders)
