[project]
name = "claude-orchestration-tests"
version = "0.1.0"
description = "Test harness for blueprint verification"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.48",
    "python-dotenv>=1.0",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "static: tests that parse files and validate structure (no API calls)",
    "behavioral: tests that run real Claude Code sessions (requires auth)",
]
testpaths = ["blueprint_v1/tests", "blueprint_v2/tests", "blueprint_v3/tests"]
pythonpath = []
norecursedirs = ["blueprint_v1/tests/fixtures", "blueprint_v2/tests/fixtures", "blueprint_v3/tests/fixtures"]
