[project]
name = "claude-orchestration-tests"
version = "0.1.0"
description = "Test harness for blueprint verification"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.48",
    "python-dotenv>=1.0",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "static: tests that parse files and validate structure (no API calls)",
    "behavioral: tests that run real Claude Code sessions (requires auth)",
]
testpaths = ["blueprints/workflow/tests", "blueprints/autonomous/tests"]
pythonpath = []
norecursedirs = ["blueprints/workflow/tests/fixtures", "blueprints/autonomous/tests/fixtures"]
